# pydantic-marshmallow

./: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  CAPABILITY_MATRIX.md  LICENSE  README.md  SECURITY.md  codecov.yml  mkdocs.yml  pydantic-marshmallow.code-workspace  pyproject.toml
.github/: RELEASE_SETUP.md
.github/instructions/: Change_Size.instructions.md  Compatibility_Analysis.instructions.md  Coverage.instructions.md  Default.instructions.md  Git.instructions.md  Implementation.instructions.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: BENCHMARK_REPORT.md  __init__.py  benchmark_framework.py  run_benchmarks.py
docs/: changelog.md  examples.md  index.md
docs/api/: errors.md  hybrid.md  index.md  schema.md  validators.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: basic-usage.md  ecosystem.md  field-options.md  hooks.md  nested-models.md
examples/: usage.py
src/pydantic_marshmallow/: __init__.py  bridge.py  errors.py  field_conversion.py  py.typed  type_mapping.py  validators.py
tests/: __init__.py  conftest.py  test_advanced_hooks.py  test_alias_support.py  test_bridge.py  test_code_review_fixes.py  test_combinations.py  test_compatibility.py  test_computed_fields.py  test_dump_options.py  test_edge_cases.py  test_error_handling.py  test_extended_coverage.py  test_extended_performance.py  test_hooks.py  test_marshmallow_contract.py  test_partial_and_unknown.py  test_performance.py  test_return_instance.py  test_schema_parameters.py  test_type_mapping.py  test_validation.py
tests/compatibility/: __init__.py  conftest.py  test_apispec.py  test_connexion.py  test_flask_marshmallow.py  test_flask_rebar.py  test_flask_smorest.py  test_marshmallow_dataclass.py  test_oneofschema.py  test_sqlalchemy.py  test_webargs.py
