[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-marshmallow"
dynamic = ["version"]
description = "Bring Pydantic's power to Marshmallow: type annotations, validators, and automatic schema generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["pydantic", "marshmallow", "validation", "serialization", "type-hints"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "marshmallow>=3.18.0,<5.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "typing-extensions>=4.0.0",
    "orjson>=3.9.0",  # Rust-based JSON - auto-detected by Pydantic for 2-10x faster JSON
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "email-validator>=2.1.0",
    # Linting/typing
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "flake8>=7.1.0",
    "flake8-pyproject>=1.2.4",  # Enable flake8 to read pyproject.toml
    # Third-party compatibility testing (all optional at runtime)
    "sqlalchemy>=2.0.30",
    "marshmallow-sqlalchemy>=1.1.0",
    "flask>=3.0.0",
    "flask-marshmallow>=1.2.0",
    "webargs>=8.5.0",
    "apispec>=6.5.0",
    "pyyaml>=6.0.1",
    "flask-rebar>=3.0.0",
    "flask-smorest>=0.44.0",
    "marshmallow-dataclass>=8.7.0",
    "marshmallow-oneofschema>=3.1.0",
    "connexion[flask,swagger-ui,uvicorn]>=3.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]
all = ["pydantic-marshmallow[dev,docs]"]

[project.urls]
Homepage = "https://github.com/mockodin/pydantic-marshmallow"
Documentation = "https://mockodin.github.io/pydantic-marshmallow"
Repository = "https://github.com/mockodin/pydantic-marshmallow"
Issues = "https://github.com/mockodin/pydantic-marshmallow/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Get version from git tags (e.g., v1.0.0 -> 1.0.0)
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["src/pydantic_marshmallow"]
branch = true
omit = ["*/tests/*", "*/benchmarks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]
fail_under = 75
show_missing = true
precision = 2

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# DIFF-COVER CONFIGURATION (changed code coverage)
# =============================================================================
[tool.diff_cover]
compare_branch = "origin/main"
fail_under = 80

# =============================================================================
# MYPY CONFIGURATION (Static Type Checker)
# =============================================================================
[tool.mypy]
python_version = "3.10"
# Strict mode settings
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
# Output settings
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true
# Additional checks
enable_error_code = [
    "ignore-without-code",
    "redundant-cast",
    "truthy-bool",
    "truthy-iterable",
    "unused-awaitable",
]

[[tool.mypy.overrides]]
module = [
    "flask.*",
    "flask_marshmallow.*",
    "flask_rebar.*",
    "flask_smorest.*",
    "webargs.*",
    "apispec.*",
    "marshmallow_sqlalchemy.*",
    "marshmallow_dataclass.*",
    "sqlalchemy.*",
    "marshmallow_oneofschema.*",
    "connexion.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false

# =============================================================================
# RUFF CONFIGURATION (Fast Python Linter)
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "htmlcov",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    # Core Python (Essential)
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    # Code Quality (Recommended)
    "B",      # flake8-bugbear (bug detection)
    "C4",     # flake8-comprehensions
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python)
    "SIM",    # flake8-simplify
    "PIE",    # flake8-pie (misc lints)
    "RET",    # flake8-return
    # Complexity
    "C90",    # mccabe complexity
    # Ruff-specific
    "RUF",    # ruff-specific rules
]
ignore = [
    # Line length handled by formatter
    "E501",
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Security - context-dependent
    "S101",   # Use of assert detected (needed for tests)
    # Simplify - not always clearer
    "SIM108", # Use ternary operator (not always more readable)
    "SIM102", # Nested if (sometimes more readable)
    # Return - sometimes explicit else is clearer
    "RET505", # Unnecessary else after return
    "RET504", # Unnecessary assignment before return (sometimes clearer)
]
# Safe auto-fixes only
fixable = ["ALL"]
unfixable = [
    "B",      # Don't auto-fix bugbear (may change behavior)
    "F841",   # Don't auto-remove unused variables
]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and don't need full annotations
"tests/**/*" = [
    "S101",    # assert is fine in tests
    "D",       # Don't require docstrings in tests
    "RUF012",  # Mutable class attrs OK in tests (e.g., OneOfSchema.type_schemas)
    "N806",    # Variable names like UserSchema in functions are intentional
    "SIM118",  # .keys() is fine for clarity
    "SIM105",  # try-except-pass patterns OK in tests
    "B011",    # assert False is intentional in tests
    "B007",    # Unused loop variables OK in tests
    "F401",    # Unused imports OK (pytest_benchmark availability check)
    "F841",    # Unused variables OK in performance tests
]

[tool.ruff.lint.isort]
known-first-party = ["pydantic_marshmallow"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.mccabe]
# Bridge code has complex methods that handle many edge cases
# Increasing to 40 to accommodate _do_load (33), type_to_marshmallow_field (22), etc.
max-complexity = 40

[tool.flake8]
max-complexity = 40
max-line-length = 120
ignore = [
    "E501",  # Line length handled by formatter
    "E203",  # Whitespace before ':' - conflicts with black
    "W503",  # Line break before binary operator
]
per-file-ignores = [
    # Tests: allow unused imports/vars, flexible whitespace
    "tests/*:F401,F841,E302,E303",
    # __init__.py: allow unused imports (re-exports)
    "*/__init__.py:F401",
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[dependency-groups]
dev = [
    "diff-cover>=10.2.0",
]
